#22tq3q - fix rrp price colour, alignment, overlap with out of stock message

--- a/styles/base/index.scss
+++ b/styles/base/index.scss
@@ -7,9 +7,7 @@
 }
 
 .rrp-price {
-  color: red;
-  text-decoration: underline;
-  text-decoration-style: dotted;
+  color: e53322;
 }
 
 .de-rrp-tooltip {
@@ -51,8 +49,6 @@
 
 .de-rrp-tooltipOpener {
   cursor: pointer;
-  text-decoration: underline;
-  text-decoration-style: dotted;
   &:hover ~ .de-rrp-tooltip {
     display: block;
   }
